Added pages and functionality for viewing products, adding products and logging in

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -2,19 +2,19 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
-  <title>Om oss</title>
+  <title>About</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav>
-      <a href="index.html">Startsida</a>
+      <a href="index.html">Start Page</a>
     </nav>
   </header>
 
   <main>
-    <h1>Om oss</h1>
-    <p>Välkommen till min webshop! Här säljer vi frukt och annat gott.</p>
+    <h1>About</h1>
+    <p>Welcome to this webshop. This webshop is part of the assignment "Build something" in the course PA2577</p>
   </main>
 </body>
 </html>
