--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,11 @@
 <body>
   <header>
     <nav>
-      <a href="cart.html">Kundvagn</a>
-      <a href="about.html">Om oss</a>
-      <a href = "login.html">Logga in</a>
+      <a href="cart.html">Cart</a>
+      <a href="about.html">About us</a>
+      <a href = "login.html">Log in</a>
+      <a href = "products.html">Show products</a>
+      <a href = "add_product.html">Add product</a>
     </nav>
   </header>
 
