--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="eng">
 <head>
   <meta charset="UTF-8">
-  <title>Webshop – login</title>
+  <title>Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav>
-      <a href="index.html">Startsida</a>
-      
+      <a href="index.html">Start page</a>
     </nav>
   </header>
 
   <main>
-    <h1>Logga in</h1>
-    <input type="text" placeholder="username", id ="fname">
-    <input type="text" placeholder="password", id = "lname">
-    
+    <h1>Log in</h1>
+    <input type="text" placeholder="username", id ="name">
+    <input type="password" placeholder="password", id = "password">
+    <button type="button" id="btn2" onclick="login()">login</button>
   </main>
 
   <script src="app.js"></script>
