--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -8,12 +8,12 @@
 <body>
   <header>
     <nav>
-      <a href="index.html">Startsida</a>
+      <a href="index.html">Start Page</a>
     </nav>
   </header>
 
   <main>
-    <h1>Kundvagn</h1>
+    <h1>Cart</h1>
     <ul id="cart"></ul>
   </main>
 
