added infrastructure for docker/docker-compose
Added SQLite for mocking the real database (only customer service)

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -17,6 +17,10 @@
     <input type="text" placeholder="username", id ="name">
     <input type="password" placeholder="password", id = "password">
     <button type="button" id="btn2" onclick="login()">login</button>
+    <h1>Create Account</h1>
+    <input type="text" placeholder="New username", id ="newName">
+    <input type="password" placeholder="new password", id = "newPassword">
+    <button type ="button" id="btn3" onclick="addCustomer()"> Create account</button>
   </main>
 
   <script src="app.js"></script>
