--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
       <a href="cart.html">Cart</a>
       <a href="about.html">About us</a>
       <a href = "login.html">Log in</a>
-      <a href = "products.html">Show products</a>
+      <a href = "products_page.html">Show products</a>
       <a href = "add_product.html">Add product</a>
     </nav>
   </header>
