everything is working fine

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <nav>
       <a href="cart.html">Cart</a>
       <a href="about.html">About us</a>
-      <a href = "login.html">Log in</a>
+      <a href = "login_page.html">Log in</a>
       <a href = "products_page.html">Show products</a>
       <a href = "add_product.html">Add product</a>
     </nav>
