added comments and removes page "cart"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="eng">
 <head>
   <meta charset="UTF-8">
-  <title>Webshop – Startpage</title>
+  <title>Webshop - Startpage</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav>
-      <a href="cart.html">Cart</a>
       <a href="about.html">About us</a>
       <a href = "login_page.html">Log in</a>
       <a href = "products_page.html">Show products</a>
